...
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/reminderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Reminder text"
        android:inputType="text"
        android:layout_marginBottom="8dp"/>

...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Take Photo" />
    </LinearLayout>

    <Button
        android:id="@+id/addReminderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add"
        android:layout_marginTop="16dp" />
</LinearLayout>

