...
        android:paddingHorizontal="12dp"
        android:clipToPadding="false"
        tools:listitem="@layout/item_note" />

    <!-- Floating button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/add_reminder"
...
